feat: add photo material intake
